--- a/style.css
+++ b/style.css
@@ -1,5 +1,55 @@
+html, body, div,class,id,h1, h2, p, ul, li, article, section{
+	border: none;
+	font:italic;
+	font-size: 1em;
+	vertical-align: baseline;
+	font-family: Helvetica ,sans-serif;
+}
+html,body{
+	margin-left: 50px;
+	padding: 20px;
+	font-family:Helvetica, sans-serif;
+	background: #f3f3f3;
+}
 .clear {
 	clear: both;
+}
+p{
+	font-size: 1em;
+	line-height: 1.5em;
+	margin: 20px;
+	padding: 10px;
+
+}
+
+#cv{
+	width: 95%;
+	max-width: 850px;
+}
+
+.mainDetails{
+	margin: 25px 25px;
+}
+
+#name h1{
+	font-size: 3em;
+	font-weight: 500;
+	margin:-20px;
+	padding: -10px;
+}
+#name h2{
+	font-size: 2.5em;
+	margin-left: 3px;
+}
+#mainArea{
+	padding-right: 40px;
+	border-top: solid;
+	border-color: #cf8a05;
+	border-width: 2px;
+}
+#mainArea h1{
+	color: #444444;
+	font-family: Rokkitt,sans-serif;
 }
 
 #headshot {
@@ -7,21 +57,60 @@
 	float: left;
 	margin-right: 30px;
 }
+#headshot img{
+	width: 100%;
+	height: auto;
+	border-radius: 50px;
+}
 
 #name {
 	float: left;
 }
-
-#contactDetails {
+#contactDetails  {
 	float: right;
+	font-size: 1em;
+	margin: 10px;
 }
+#contactDetails:hover{
+	font-style: italic;
+}
+#contactDetails ul li{
+	color: #181818;
+}
+#contactDetails ul li a{
+	color: #181818;
+}
+
+section{
+	padding: 15px;
+	margin: 10px;
+}
+
 
 .sectionTitle {
 	float: left;
 	width: 25%;
+	color: #cf8a05 ;
 }
 
 .sectionContent {
 	float: right;
 	width: 72.5%;
+	border-bottom: solid;
+	border-color: #dedede;
+	border-width: 1px;
+}
+.sectionContent h2{
+	color: #cf8a05;
+}
+.subDetails{
+	font-size: 1em;
+	font-style: italic;
+	margin-bottom: 5px;
+	
+}
+.keySkills{
+	column-count: 3;
+	margin-bottom: 15px;
+	font-size: 1em;
 }
