--- a/style.css
+++ b/style.css
@@ -37,9 +37,10 @@ p{
 	margin:-20px;
 	padding: -10px;
 }
-#name h2{
-	font-size: 2.5em;
-	margin-left: 3px;
+#name h2 {
+    font-size: 2.5em;
+    margin-left: 3px;
+    padding: 17px;
 }
 #mainArea{
 	padding-right: 40px;
