--- a/style.css
+++ b/style.css
@@ -48,9 +48,9 @@ p{
 	border-color: #cf8a05;
 	border-width: 2px;
 }
-#mainArea h1{
-	color: #444444;
-	font-family: Rokkitt,sans-serif;
+#mainArea h1 {
+    color: #cf8a05;
+    font-family: Rokkitt,sans-serif;
 }
 
 #headshot {
@@ -92,6 +92,7 @@ section{
 	float: left;
 	width: 25%;
 	color: #cf8a05 ;
+	font-size: 25px;
 }
 
 .sectionContent {
@@ -101,8 +102,8 @@ section{
 	border-color: #dedede;
 	border-width: 1px;
 }
-.sectionContent h2{
-	color: #cf8a05;
+.sectionContent h2 {
+    color: #444;
 }
 .subDetails{
 	font-size: 1em;
